<resources>
	<string name="app_name">EasyHttp</string>
	<string name="example_title">Easy Http Example</string>
	<string name="demo_http_request">Demo Http Request</string>
	<string name="demo_http_upload">Demo Http Upload</string>
	<string name="http_record">Http Record</string>
	<string name="request_url_hint">Request Url</string>
	<string name="headers">Headers</string>
	<string name="body">Body</string>
	<string name="about">About</string>
	<string name="key">Key</string>
	<string name="value">Value</string>
	<string name="header_clear_notice">Do you want to clear header</string>
	<string name="form_clear_notice">Do you want to clear form</string>
	<string name="key_empty_hint">Key cannot be null</string>
	<string name="value_empty_hint">Value cannot be null</string>
	<string name="notice">Notice</string>
	<string name="yes">yes</string>
	<string name="no">no</string>
	<string name="get">GET</string>
	<string name="head">HEAD</string>
	<string name="post">POST</string>
	<string name="put">PUT</string>
	<string name="delete">DELETE</string>
	<string name="patch">PATCH</string>
	<string name="wait_notice">Please wait…</string>
	<string name="response">Response</string>
	<string name="success">Success</string>
	<string name="error">Error</string>
	<string name="form_body">Form Body</string>
	<string name="file">File</string>
	<string name="text">Text</string>
	<string name="about_content">This app is demo for EasyHttp Library.\nYou can get more information in the github page.</string>
	<string name="url_error_hint">Url Error</string>
	<string name="open_github_error">Open github error</string>
</resources>
