<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/colorBackground"
		tools:context=".activity.MainActivity">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/cl_topBar"
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:background="@color/colorMain01"
			android:elevation="2dp"
			android:paddingStart="15dp"
			android:paddingEnd="0dp"
			app:layout_constraintTop_toTopOf="parent">

			<TextView
				android:id="@+id/tv_title"
				android:layout_width="0dp"
				android:layout_height="50dp"
				android:gravity="center_vertical"
				android:singleLine="true"
				android:text="@string/about"
				android:textColor="@color/colorBackground"
				android:textSize="@dimen/easy_http_ts_sp05"
				android:textStyle="bold"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toLeftOf="@id/iv_close"
				app:layout_constraintTop_toTopOf="parent" />

			<androidx.appcompat.widget.AppCompatImageView
				android:id="@+id/iv_close"
				android:layout_width="50dp"
				android:layout_height="50dp"
				android:layout_weight="3"
				android:onClick="onClick"
				android:padding="10dp"
				android:src="@drawable/easy_http_ic_close"
				android:tint="@color/colorBackground"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:ignore="SpeakableTextPresentCheck" />

		</androidx.constraintlayout.widget.ConstraintLayout>

		<androidx.core.widget.NestedScrollView
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:clipToPadding="false"
			android:paddingBottom="100dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintTop_toBottomOf="@id/cl_topBar">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingStart="15dp"
				android:paddingTop="10dp"
				android:paddingEnd="15dp"
				android:paddingBottom="10dp">

				<androidx.appcompat.widget.AppCompatImageView
					android:id="@+id/iv_icon"
					android:layout_width="150dp"
					android:layout_height="150dp"
					android:layout_marginTop="10dp"
					android:background="@drawable/bg_round"
					android:padding="5dp"
					android:src="@mipmap/ic_launcher_round"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<TextView
					android:id="@+id/tv_appName"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:text="@string/app_name"
					android:textColor="@color/colorText01"
					android:textSize="30sp"
					android:textStyle="bold"
					app:layout_constraintHorizontal_chainStyle="packed"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toLeftOf="@id/iv_github"
					app:layout_constraintTop_toBottomOf="@id/iv_icon" />

				<androidx.appcompat.widget.AppCompatImageView
					android:id="@+id/iv_github"
					android:layout_width="30dp"
					android:layout_height="30dp"
					android:layout_marginStart="10dp"
					android:layout_marginTop="3dp"
					android:onClick="onClick"
					android:src="@drawable/ic_github"
					app:layout_constraintBottom_toBottomOf="@id/tv_appName"
					app:layout_constraintHorizontal_chainStyle="packed"
					app:layout_constraintLeft_toRightOf="@id/tv_appName"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toTopOf="@id/tv_appName"
					app:tint="@color/colorMain01" />

				<TextView
					android:id="@+id/tv_about"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginStart="50dp"
					android:layout_marginTop="10dp"
					android:layout_marginEnd="50dp"
					android:text="@string/about_content"
					android:textColor="@color/colorText01"
					android:textSize="@dimen/ts_sp02"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toBottomOf="@id/tv_appName" />

			</androidx.constraintlayout.widget.ConstraintLayout>

		</androidx.core.widget.NestedScrollView>

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
